# prometheus

./: .gitignore  Cargo.toml  compile.sh  readme.md
.cargo/: config.toml
scripts/: build-and-send.sh  test.sh
scripts/arm64_build/: Dockerfile
src/: config.rs  db.rs  discord.rs  main.rs  utils.rs
src/art/: mod.rs
src/safety/: discord.rs  mod.rs
src/wit/: mod.rs
