[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
google-safebrowsing4 = "5.0.2"
image = "0.24.6"
imageproc = "0.23.0"
linkify = "0.10.0"
openai = "1.0.0-alpha.13"
rand = "0.8.5"
redis = { version = "0.23.1", features = ["tokio-comp", "tokio-native-tls-comp", "cluster", "json"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "native-tls-vendored"] }
rusttype = "0.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde-redis = "0.13.0"
serde_json = "1.0.104"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
sha256 = "1.3.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
tokio = { version = "1.29.1", features = ["fs", "rt-multi-thread", "macros"] }
toml = "0.7.6"
urlencoding = "2.1.3"
